--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <div>
-            <img src="immage.img/avt ytb.jpg" width="100%" height="300px" alt="Ảnh YouTube">
+            <img src="""D:\avt ytb.jpg""" width="100%" height="300px" alt="Ảnh YouTube">
         </div>
         <div style="display: flex; width: 100%;">
             <div style="background-color: rgb(255, 132, 132);width: 20%; padding: 10px;">
@@ -37,7 +37,7 @@
                 <table style="width: 100%;">
                     <tr>
                         <td rowspan="7" style="width: 25%;">
-                            <img src="immage.img/ẢNH MẶT AN.jpg" width="100%" height="150">
+                            <img src=""D:\ẢNH MẶT AN.jpg"" width="100%" height="150">
                         </td>
                         <td style="width: 20%;">Họ tên</td>
                         <td style="width: 50%;">Trần Văn An</td>
