--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <div>
-            <img src=""immage.img/avt ytb.jpg"" width="100%" height="300px" alt="Ảnh YouTube">
+            <img src=""immage.img/avt-ytb.jpg"" width="100%" height="300px" alt="Ảnh YouTube">
         </div><!DOCTYPE html>
 <html>
 <head>
@@ -29,7 +29,7 @@
 <body>
     <div>
         <div>
-            <img src="immage.img/avt ytb.jpg" width="100%" height="300px" alt="Ảnh YouTube">
+            <img src="immage.img/avt-ytb.jpg" width="100%" height="300px" alt="Ảnh YouTube">
         </div>
         <div style="display: flex; width: 100%;">
             <div style="background-color: rgb(255, 132, 132);width: 20%; padding: 10px;">
