--- a/index.html
+++ b/index.html
@@ -11,100 +11,97 @@
 </head>
 
 <body>
+    <!-- Ảnh banner -->
     <div>
-        <div>
-            <img src="immage.img/avt-ytb.jpg" width="100%" height="300px" alt="Ảnh YouTube">
+        <img src="images/avt-ytb.jpg" width="100%" height="300px" alt="Ảnh YouTube">
+    </div>
+
+    <div style="display: flex; width: 100%;">
+        <!-- Sidebar trái -->
+        <div style="background-color: rgb(255, 132, 132); width: 20%; padding: 10px;">
+            <h1 style="color: rgb(0, 255, 0); text-align: center;">TRANG CHỦ</h1>
+            <ul>
+                <li>Lưu Bút</li>
+                <li>Nghe Nhạc</li>
+                <li>Xem Phim</li>
+                <li>Đọc Chuyện</li>
+            </ul>
+            <h1 style="color: rgb(0, 255, 0); text-align: center;">TÌNH YÊU</h1>
+            <ul>
+                <li>Màu Hồng</li>
+                <li>Ghét sự giả dối</li>
+                <li>Free Fire</li>
+                <li>Angenol Cartoon</li>
+            </ul>
         </div>
-        <div style="display: flex; width: 100%;">
-            <div style="background-color: rgb(255, 132, 132);width: 20%; padding: 10px;">
-                <h1 style="color: rgb(0, 255, 0); text-align: center;">TRANG CHỦ</h1>
-                <ul>
-                    <li>Lưu Bút</li>
-                    <li>Nghe Nhạc</li>
-                    <li>Xem Phim</li>
-                    <li>Đọc Chuyện</li>
-                </ul>
-                <h1 style="color: rgb(0, 255, 0); text-align: center;">TÌNH YÊU</h1>
-                <ul>
-                    <li>Màu Hồng</li>
-                    <li>Ghét sự giả dúi</li>
-                    <li>Free Fire</li>
-                    <li>Angenol Cartoon</li>
-                </ul>
-            </div>
-            <div style="background-color: rgb(197, 176, 176);width: 60%;">
-                <h1 style="width: 100%; text-align: center;">THÔNG TIN CÁ NHÂN</h1>
-                <table style="width: 100%;">
-                    <tr>
-                        <td rowspan="7" style="width: 25%;">
-                            <img src="immage.img/ẢNH-MẶT-AN.jpg" width="100%" height="150">
-                        </td>
-                        <td style="width: 20%;">Họ tên</td>
-                        <td style="width: 50%;">Trần Văn An</td>
-                    </tr>
-                    <tr>
-                        <td>Giới tính</td>
-                        <td>Nam</td>
-                    </tr>
-                    <tr>
-                        <td>Ngày sinh</td>
-                        <td>18/09/2006</td>
-                    </tr>
-                    <tr>
-                        <td>Quê Quán</td>
-                        <td>Ân Thi_Hưng Yên</td>
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td>atranvan096@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td>Điện Thoại</td>
-                        <td>0358974644</td>
-                    </tr>
-                    <tr>
-                        <td>Website</td>
-                        <td><a href="https://www.youtube.com/@AngenolCartoon?sub_confirmation=1">Ấn Vào Đây Nè</a></td>
-                    </tr>
-                </table>
-                <table>
-                    <td rowspan="3" style="width: 30%;">
+
+        <!-- Nội dung chính -->
+        <div style="background-color: rgb(197, 176, 176); width: 60%; padding: 10px;">
+            <h1 style="width: 100%; text-align: center;">THÔNG TIN CÁ NHÂN</h1>
+            <table style="width: 100%;">
+                <tr>
+                    <td rowspan="7" style="width: 25%;">
+                        <img src="images/mat-an.jpg" width="100%" height="150" alt="Ảnh thẻ">
+                    </td>
+                    <td style="width: 20%;">Họ tên</td>
+                    <td style="width: 50%;">Trần Văn An</td>
+                </tr>
+                <tr><td>Giới tính</td><td>Nam</td></tr>
+                <tr><td>Ngày sinh</td><td>18/09/2006</td></tr>
+                <tr><td>Quê Quán</td><td>Ân Thi, Hưng Yên</td></tr>
+                <tr><td>Email</td><td>atranvan096@gmail.com</td></tr>
+                <tr><td>Điện Thoại</td><td>0358974644</td></tr>
+                <tr><td>Website</td><td><a href="https://www.youtube.com/@AngenolCartoon?sub_confirmation=1">Subscribe to the channel</a></td></tr>
+            </table>
+
+            <table style="width: 100%; margin-top: 20px;">
+                <tr>
+                    <td style="width: 33%;">
                         <h2 style="color: rgb(0, 255, 0)">Sở Thích</h2>
-                        <li> Chơi Game</li>
-                        <li>Viết Code</li>
-                        <li>Làm hoạt hình</li>
+                        <ul>
+                            <li>Chơi Game</li>
+                            <li>Viết Code</li>
+                            <li>Làm hoạt hình</li>
+                        </ul>
                     </td>
-                    <td rowspan="3" style="width: 30%;">
+                    <td style="width: 33%;">
                         <h2 style="color: rgb(0, 255, 0)">Sở Trường</h2>
-                        <li> Ăn</li>
-                        <li>Ngủ</li>
-                        <li>Nghỉ</li>
+                        <ul>
+                            <li>Ăn</li>
+                            <li>Ngủ</li>
+                            <li>Nghỉ</li>
+                        </ul>
                     </td>
-                    <td rowspan="3" style="width: 30%;">
+                    <td style="width: 33%;">
                         <h2 style="color: rgb(0, 255, 0)">Sở Đoản</h2>
-                        <li> Ngủ Nhiều</li>
-                        <li>Học ít</li>
-                        <li>Làm nhiều hơn học</li>
+                        <ul>
+                            <li>Ngủ Nhiều</li>
+                            <li>Học ít</li>
+                            <li>Làm nhiều hơn học</li>
+                        </ul>
                     </td>
-                </table>
-            </div>
-            <div style="background-color: rgb(255, 132, 132);width: 20%; padding: 10px;">
-                <h2 style="color: rgb(0, 255, 0); text-align: center;">HOẠT ĐỘNG</h2>
-                <ul>
-                    <li>Tham Quan Trường Sư Phạm Kĩ Thuật Hưng Yên</li>
-                    <li>Đá Bóng,  Chơi Game, Free Fire</li>
-                    <li>Ăn bún bò huế</li>
-                    <li>Làm Bài Tập Thầy Nguyễn Hữu Đông</li>
-                </ul>
-            </div>
+                </tr>
+            </table>
         </div>
-        <div style="background-color: rgb(66, 148, 66); height: 45px; text-align: center;;">
-            <p>
-                Bản quyền thuộc về Trần Văn An <br>
-                Email: atranvan096@gmail.com, Phone: 0358974644
-            </p>
+
+        <!-- Sidebar phải -->
+        <div style="background-color: rgb(255, 132, 132); width: 20%; padding: 10px;">
+            <h2 style="color: rgb(0, 255, 0); text-align: center;">HOẠT ĐỘNG</h2>
+            <ul>
+                <li>Tham Quan Trường Sư Phạm Kĩ Thuật Hưng Yên</li>
+                <li>Đá Bóng, Chơi Game, Free Fire</li>
+                <li>Ăn bún bò huế</li>
+                <li>Làm Bài Tập Thầy Nguyễn Hữu Đông</li>
+            </ul>
         </div>
     </div>
-</body>
 
+    <!-- Footer -->
+    <div style="background-color: rgb(66, 148, 66); height: 45px; text-align: center;">
+        <p style="color: white;">
+            Bản quyền thuộc về Trần Văn An<br>
+            Email: atranvan096@gmail.com - Phone: 0358974644
+        </p>
+    </div>
+</body>
 </html>
